# current-london-2026-back-to-boring-genai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
contracts/avro/: answer.draft.accepted.v1-value.avsc  answer.draft.proposed.v1-value.avsc  answer.draft.rejected.v1-value.avsc  answer.reviewed.v1-value.avsc  audit.timeline.v1-value.avsc  evidence.ai_safe.v1-value.avsc  evidence.internal.v1-value.avsc  questionnaire.questions.v1-value.avsc  questionnaire.received.v1-value.avsc  questionnaire.response.ready.v1-value.avsc  security.alert.v1-value.avsc
demo_fixtures/: attack_scenarios.json  evidence.json  questionnaire.json
scripts/: bootstrap_acls.py  bootstrap_schemas.py  bootstrap_topics.py  wait_for_kafka.py  wait_for_langfuse.py  wait_for_schema_registry.py
src/demo/: avro_contracts.py  cli.py  config.py  contracts.py  fixtures.py  kafka_io.py  observability.py  scenario_runner.py  schema_registry.py
tests/acl/: README.md  test_acl_scenario_regression.py  test_ai_drafter_permissions.py
tests/api/: test_agent_swarm.py  test_attack_response_includes_acl_rule.py  test_audit_structured_events.py  test_authority_boundary.py  test_compatibility_contract.py  test_dev_cors.py  test_focused_proof_harness.py  test_health_connection_never_500s.py  test_observer_events.py  test_pacing.py  test_questionnaire_endpoints.py  test_run_allocate_then_run.py  test_schema_lookup.py  test_state_extensions.py  test_stream_emits_stage_events.py  test_stream_pacing.py  test_stream_replay.py  (+3 more)
web/: index.html
(+75 files in other folders)
