[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "questionnaire-ai-demo"
version = "0.1.0"
description = "Kafka-governed questionnaire AI conference demo"
requires-python = ">=3.11"
dependencies = [
  "confluent-kafka>=2.12",
  "fastavro>=1.12",
  "fastapi>=0.115",
  "pydantic-settings>=2.0",
  "typer>=0.12",
  "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.0",
]
observability = [
  "langfuse>=3.0",
]

[project.scripts]
demo = "demo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "codex: real Codex CLI smoke tests, disabled unless DEMO_RUN_CODEX_TESTS=1",
]
